added handshake -1